[package]
name = "aeron-rs"
version = "0.1.0"
authors = ["Bradlee Speice <bradlee@speice.io>"]
edition = "2018"
repository = "https://github.com/bspeice/aeron-rs"
readme = "README.md"
license = "Apache-2.0"

[badges]
travis-ci = { repository = "bspeice/aeron-rs", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
aeron_driver-sys = { path = "../aeron_driver-sys" }
memmap = "0.7"

[dev-dependencies]
clap = "2.33"
ctrlc = "3.1.3"
tempfile = "3.1"
