[package]
name = "aeron_driver-sys"
version = "0.1.0+1.21.2"
authors = ["Bradlee Speice <bradlee@speice.io>"]
edition = "2018"
links = "aeron_driver"
build = "build.rs"

[dependencies]

[build-dependencies]
bindgen = "0.51"
cmake = "0.1"
dunce = "1.0.0"

[features]
static = []

[dev-dependencies]
clap = "2.33"
ctrlc = "3.1.3"
tempfile = "3.1"
